2012-04-08  John D. Ramsdell  <ramsdell@mitre.org>

	* add.lua: Added checks to ensure arguments are numbers.

	* datalog.c (dl_pcall, dl_lua): Removed DATALOG_DEBUG, and now
	always print the error message returned from Lua.  This message is
	very useful now that its so easy to add primitives using the -l
	option.

2012-04-07  John D. Ramsdell  <ramsdell@mitre.org>

	* git: Tagged as datalog-2.0 with tag v2.0.

	* configure.ac:  Enabled the use of the one C99 feature used in
	the program.  When compiled with a C99 compiler, pushstring in
	loader.c uses a variable length array instead of a malloc.

	* interp.c (getaline): Added support for GNU readline in the
	interpreter when it is available.

2012-04-06  John D. Ramsdell  <ramsdell@mitre.org>

	* loader.c (addstr): Fixed two bugs associated with the end of a
	string.  Fixed the case in which the last character in a buffer is
	double quote and the previous character is part of a numerical
	escape.  Also fixed the case in which a pushed buffer was followed
	by a buffer read giving a double quote, but the state s1 was not
	SEEN_NOTHING.

2012-04-05  John D. Ramsdell  <ramsdell@mitre.org>

	* loader.c (pushstring, addstr): In order to better integrate with
	other Unix tools, numeric string escapes now consist of one, two,
	or three octal digits.  This change makes this version
	incompatible with previous versions.

	* interp.c (main): Added the -l option that loads a Lua script
	after the loading of datalog.lua.  The Lua script can be used to
	add primitives.

2012-04-04  John D. Ramsdell  <ramsdell@mitre.org>

	* NEWS: Converted the file to use outline format.

2012-04-03  John D. Ramsdell  <ramsdell@mitre.org>

	* datalog.texi (Import/Export): Added an example showing
	/etc/passwd as the source of a database table.

	* Makefile.am (dist_noinst_SCRIPTS): Added the datalogimport and
	datalogexport scripts.

2012-04-02  John D. Ramsdell  <ramsdell@mitre.org>
