@@ -1,5 +1,9 @@
 2012-04-08  John D. Ramsdell  <ramsdell@mitre.org>
 
+	* interp.c (getaline): Fixed end of line bugs when using
+	readline for the case of a line continued with '\' and when
+	reading a file with '='.
+
 	* add.lua: Added checks to ensure arguments are numbers.
 
 	* datalog.c (dl_pcall, dl_lua): Removed DATALOG_DEBUG, and now
